# FDL

./: LICENSE  README.markdown  fdl.cabal
examples/: bad.fdl  circle.hs  color.fdl  color.hs  composite.fdl  composite.hs  elipse.fdl  elipse.hs  function.fdl  pulsating.fdl  pulsating.hs  repetition.hs  spinning.fdl  spinning.hs  star.hs  with.hs
src/: Draw.hs
src/Graphics/FDL/: GL.hs  Lang.hs  Parser.hs  Prelude.hs  Typer.hs
src/Graphics/FDL/Backend/: GL.hs
src/Graphics/FDL/Lang/: Impl.hs
